Update and rename 20180117-osmo to 20180117-osmo.md

--- a/_posts/20180117-osmo.md
+++ b/_posts/20180117-osmo.md
@@ -1,4 +1,12 @@
-You will need to clone a fork of GR-GSM from GitHub:
+
+---
+layout: post
+title: trx install
+---
+
+You will need to clone a fork of GR-GSM from GitHu
+
+
 >  https://github.com/axilirator/gr-gsm/tree/fixeria/trx
 >  I am going to send a pull request, as soon as I finish
 >  some things and clean up the code according to your
